--- a/About_us.html
+++ b/About_us.html
@@ -5,7 +5,7 @@
    <head> 
  <header> 
  <nav dir="rtl" id="myHeader"> עלינו   
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\CITYGO.html"> ראשי </a>
+   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> ראשי </a>
      <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Signup.html"> הרשמה </a>
     <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Products.html"> מוצרים </a>
    <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Live.html"> שימוש לייב </a>
