Update and rename About_citygo.html to about_citygo.html

--- a/about_citygo.html
+++ b/about_citygo.html
@@ -39,10 +39,10 @@ img {
 <header> 
  <nav dir="rtl" id="myHeader"> על המותג 
    <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> ראשי </a> 
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Signup.html"> הרשמה </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Products.html"> מוצרים </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Live.html"> שימוש לייב </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\About_us.html"> עלינו </a> 
+   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה </a>
+  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים </a>
+  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
+  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a> 
 </nav> 
 </header>  
     <div class="container">
