--- a/products.html
+++ b/products.html
@@ -16,10 +16,10 @@ color:#ffffff; </style>
   <header> 
      <nav dir="rtl" id="myHeader"> מוצרים  
          <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> בית</a>
-          <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Signup.html"> הרשמה</a>
-          <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\Live.html"> שימוש לייב </a>
-        <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\About_us.html"> עלינו </a>
-        <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\About_citygo.html"> על המותג </a>
+          <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה</a>
+          <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
+        <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a>
+        <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_citygo.html"> על המותג </a>
  </nav>
    </header> 
 
