--- a/about_citygo.html
+++ b/about_citygo.html
@@ -38,11 +38,11 @@ img {
   <body>
 <header> 
  <nav dir="rtl" id="myHeader"> על המותג 
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> ראשי </a> 
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a> 
+   <a href="index.html"> ראשי </a> 
+   <a href="signup.html"> הרשמה </a>
+  <a href="products.html"> מוצרים </a>
+  <a href="live.html"> שימוש לייב </a>
+  <a href="about_us.html"> עלינו </a> 
 </nav> 
 </header>  
     <div class="container">
