--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ color:#ffffff; </style>
 
   <header> 
      <nav  id="myHeader"> ראשי  
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה </a>
- <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים </a>
-  <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
-  <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_citygo.html"> על המותג </a> </nav>
+<a href="signup.html"> הרשמה </a>
+ <a href= "products.html"> מוצרים </a>
+  <a href= "live.html"> שימוש לייב </a>
+  <a href= "about_us.html"> עלינו </a>
+  <a href="about_citygo.html"> על המותג </a> </nav>
 </nav>
 
       <img src= "photos/hero.svg" alt="hero photo"style="width:107%;>
