--- a/about_citygo.html
+++ b/about_citygo.html
@@ -37,12 +37,12 @@ img {
   </style>
   <body>
 <header> 
- <nav dir="rtl" id="myHeader"> על המותג 
-   <a href="index.html"> ראשי </a> 
-   <a href="signup.html"> הרשמה </a>
-  <a href="products.html"> מוצרים </a>
-  <a href="live.html"> שימוש לייב </a>
-  <a href="about_us.html"> עלינו </a> 
+ <nav dir="/rtl" id="myHeader"> על המותג 
+   <a href="/index.html"> ראשי </a> 
+   <a href="/signup.html"> הרשמה </a>
+  <a href="/products.html"> מוצרים </a>
+  <a href="/live.html"> שימוש לייב </a>
+  <a href="/about_us.html"> עלינו </a> 
 </nav> 
 </header>  
     <div class="container">
