--- a/about_us.html
+++ b/about_us.html
@@ -5,11 +5,11 @@
    <head> 
  <header> 
  <nav dir="rtl" id="myHeader"> עלינו   
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> ראשי </a>
-     <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה </a>
-    <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים </a>
-   <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_citygo.html"> על המותג </a> 
+   <a href=/index.html"> ראשי </a>
+     <a href=/signup.html"> הרשמה </a>
+    <a href/products.html"> מוצרים </a>
+   <a href=/live.html"> שימוש לייב </a>
+   <a href=/about_citygo.html"> על המותג </a> 
   </nav>
  </header> 
 
