--- a/signup.html
+++ b/signup.html
@@ -29,11 +29,11 @@ color:#ffffff; </style>
 
   <header> 
      <nav dir="rtl" id="myHeader"> הרשמה
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> ראשי  </a>
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים  
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\live.html"> שימוש לייב </a>
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a>
-<a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_citygo.html"> על המותג </a>
+<a href="/index.html"> ראשי  </a>
+<a href="/products.html"> מוצרים  
+<a href="/live.html"> שימוש לייב </a>
+<a href="/about_us.html"> עלינו </a>
+<a href="/about_citygo.html"> על המותג </a>
 </nav>
    </header> 
 
