--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@ color:#ffffff; </style>
   <header> 
      <nav dir="rtl" id="myHeader"> הרשמה
 <a href="/index.html"> ראשי  </a>
-<a href="/products.html"> מוצרים  
+             <a href="/products.html"> מוצרים </a>
 <a href="/live.html"> שימוש לייב </a>
 <a href="/about_us.html"> עלינו </a>
 <a href="/about_citygo.html"> על המותג </a>
