--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ color:#ffffff; </style>
   <a href= "/live.html"> שימוש לייב </a>
   <a href= "/about_us.html"> עלינו </a>
   <a href="/about_citygo.html"> על המותג </a> </nav>
-
+     </nav>
 
       <img src= "photos/hero.svg" alt="hero photo"style="width:107%;>
    </header> 
