--- a/live.html
+++ b/live.html
@@ -18,11 +18,11 @@ color:#ffffff; </style>
 <body>
 <header> 
  <nav dir="rtl" id="myHeader"> שימוש לייב 
-   <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\index.html"> בית </a>
-    <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\signup.html"> הרשמה </a>
-   <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\products.html"> מוצרים </a>
-  <a href= "file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_us.html"> עלינו </a>
-  <a href="file://C:\Users\user\Desktop\אתרים תקשורת\citygo site 3rd\about_citygo.html"> על המותג </a>
+   <a href="/index.html"> בית </a>
+    <a href="/signup.html"> הרשמה </a>
+   <a href="/products.html"> מוצרים </a>
+  <a href= "/about_us.html"> עלינו </a>
+  <a href="/about_citygo.html"> על המותג </a>
 </nav>
 </header>  
 
