--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ color:#ffffff; </style>
 
   <header> 
      <nav  id="myHeader"> ראשי  
-<a href="/signup.html"> הרשמה </a>
+<a href="signup.html"> הרשמה </a>
  <a href="citygo/products.html"> מוצרים </a>
   <a href="/live.html"> שימוש לייב </a>
   <a href="/about_us.html"> עלינו </a>
