--- a/live.html
+++ b/live.html
@@ -18,7 +18,7 @@ color:#ffffff; </style>
 <body>
 <header> 
  <nav dir="rtl" id="myHeader"> שימוש לייב 
-   <a href="/index.html"> בית </a>
+   <a href="/index.html"> ראשי </a>
     <a href="/signup.html"> הרשמה </a>
    <a href="/products.html"> מוצרים </a>
   <a href= "/about_us.html"> עלינו </a>
