--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@ color:#ffffff; </style>
 
   <header> 
      <nav dir="rtl" id="myHeader"> מוצרים  
-         <a href="/index.html"> בית</a>
+         <a href="/index.html"> ראשי </a>
           <a href="/signup.html"> הרשמה</a>
           <a href="/live.html"> שימוש לייב </a>
         <a href= "/about_us.html"> עלינו </a>
