--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ color:#ffffff; </style>
  <a href="/products.html"> מוצרים </a>
   <a href="/live.html"> שימוש לייב </a>
   <a href="/about_us.html"> עלינו </a>
-  <a href="/citygo/about_citygo.html"> על המותג </a> </nav>
+  <a href="/about_citygo.html"> על המותג </a> </nav>
 
       <img src= "photos/hero.svg" alt="hero photo"style="width:107%;>
    </header> 
