--- a/about_citygo.html
+++ b/about_citygo.html
@@ -37,7 +37,7 @@ img {
   </style>
   <body>
 <header> 
- <nav dir="/rtl" id="myHeader"> על המותג 
+ <nav dir="rtl" id="myHeader"> על המותג 
   <a href="/about_us.html"> עלינו </a> 
   <a href="/live.html"> שימוש לייב </a>
      <a href="/products.html"> מוצרים </a>
