--- a/products.html
+++ b/products.html
@@ -170,14 +170,14 @@ margin:0; padding;0;
       <img class="demo cursor" src="Products/Userflow.jpg" style="width:100%"; onclick="currentSlide(2)" alt="CityGo App Userflow">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Products/SHIRT.jpg" style="width:94%"; onclick="currentSlide(3)" alt="CityGo T-shirt"
+      <img class="demo cursor" src="Products/SHIRT.jpg" style="width:100%"; onclick="currentSlide(3)" alt="CityGo T-shirt">
     </div>
  <div class="column">
-      <img class="demo cursor" src="Products/Stand.jpg"  style="width:100%"; onclick="currentSlide(4)" alt="CityGO Ad Stand & Help center illustration"
+      <img class="demo cursor" src="Products/Stand.jpg"  style="width:100%"; onclick="currentSlide(4)" alt="CityGO Ad Stand & Help center illustration">
     </div>
   
     <div class="column">
-      <img class="demo cursor" src="Products/Keyholder.png" style="width:100%"; onclick="currentSlide(5)" alt="Keyholder with CityGo logo"
+      <img class="demo cursor" src="Products/Keyholder.png" style="width:100%"; onclick="currentSlide(5)" alt="Keyholder with CityGo logo">
     </div>    
     
 </div>
