--- a/about_citygo.html
+++ b/about_citygo.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> עלינו </title> 
-	<link rel="icon" type="image/png" href="photos/LOGO.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap">
-	<link rel="stylesheet" href="styleCITYGO.css">
-	<style>
+  <head>
+<link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
+<style>
+body {
+  font-family: "Roboto", sans-serif;}
+</style>
+<link rel="stylesheet" href="styleCITYGO.css">
+     <title> עלינו </title> 
+     <link rel="icon" type="image/png" href="photos/LOGO.png">
+ <style> body{padding:0; margin:0; box-sizing: border-box;}  </style> 
+<style> a:hover{font-weight: bold;
+color:#ffffff; </style>
+  </head>
+  <style>
 		body {
 			margin: 0;
 			padding: 0;
@@ -84,3 +91,35 @@
 			display: inline-block;
 			font-size: 16px;
 			font-weight
+  </style>
+  <body>
+<header> 
+ <nav dir="rtl" id="myHeader"> על המותג 
+         <a href="/index.html"> ראשי </a> 
+      <a href="/signup.html"> הרשמה </a>
+     <a href="/products.html"> מוצרים </a>
+  <a href="/about_us.html"> עלינו </a> 
+  <a href="/live.html"> שימוש לייב </a>
+</nav> 
+</header>  
+    <div class="container">
+      <div class="image">
+        <img src="photos/CITYBUILDING.png">
+      </div>
+      <div class="text" >
+        <h1 style="color:#4b4b4b;"> על המותג </h1>
+
+         <svg height="50" width="300">
+         <g fill="none" stroke="#11b3dd">
+         <path stroke-width="6" d="M5 20 l260 0" /> </g> </svg>
+
+        <p style="font-size: 16px; text-align:right; padding: 0px 40px 0px 0px; color:#858585">
+        החברה נוסדה 2019 על ידי חנן אגרונוב <br/>סיטיגו מעסיקה כיום כ30 אנשי צוות <br/> ולשנת 2022 סיטיגו  הוכתרה ב100 החברות <br/>המבטיחות ביותר בעולם לפי פורבס   </p> 
+
+              <p style="font-size: 16px; text-align:right; padding:10px 40px 0px 0px; color:#505050"> אנחנו שמחים לבשר לכם, שהבית שלנו גדל <br/> וכרגע אנו מגייסים למספר תפקידים שונים <br/> תשלחו לדוא"ל למטה את הקו"ח שלכם <br/> על מנת שנחזור אליכם </P> 
+
+        <a style="font-size:16px; text-align:right; padding: 10px 0px 0px 190px; color:#11b3dd"; href="mailto:hananag94@gmail.com?subject=Mail from Citygo recruit page"> שלח.י דוא"ל</a>  
+      </div>
+    </div>
+  </body>
+</html>
