--- a/about_citygo.html
+++ b/about_citygo.html
@@ -1,124 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>עלינו</title>
-  <link rel="icon" type="image/png" href="photos/LOGO.png">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styleCITYGO.css">
+  <head>
+<link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
+<style>
+body {
+  font-family: "Roboto", sans-serif;}
+</style>
+<link rel="stylesheet" href="styleCITYGO.css">
+     <title> עלינו </title> 
+     <link rel="icon" type="image/png" href="photos/LOGO.png">
+ <style> body{padding:0; margin:0; box-sizing: border-box;}  </style> 
+<style> a:hover{font-weight: bold;
+color:#ffffff; </style>
+  </head>
   <style>
-    body {
-      padding: 0;
-      margin: 0;
-      font-family: "Roboto", sans-serif;
-    }
+h1 {font-size: 22px;
+    margin: 30px 0px 0px 110px;
+   text-align:center;
+   font-size: 30PX;}
+  .container {
+  display: flex;
+  flex-direction: row-reverse; 
+  justify-content: flex-start;
+}
 
-    a:hover {
-      font-weight: bold;
-      color: #ffffff;
-    }
+img {
+  max-width: 100%;
+  max-height:520PX;
+}
 
-    h1 {
-      font-size: 30px;
-      margin: 30px 0 0;
-      text-align: center;
-    }
+.text {
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .image {
-      text-align: center;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .text {
-      font-size: 16px;
-      text-align: right;
-      padding: 20px 0;
-      color: #505050;
-    }
-
-    .text p:first-of-type {
-      padding-top: 0;
-      color: #858585;
-    }
-
-    .text a {
-      font-size: 16px;
-      text-align: right;
-      padding: 10px 0;
-      color: #11b3dd;
-      display: block;
-    }
-
-    svg {
-      display: none;
-    }
-
-    @media only screen and (min-width: 768px) {
-      h1 {
-        font-size: 40px;
-        margin: 50px 0 0;
-      }
-
-      .container {
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: center;
-      }
-
-      .image {
-        width: 50%;
-        text-align: right;
-      }
-
-      .text {
-        width: 45%;
-        text-align: right;
-        padding: 20px;
-      }
-
-      .text a {
-        padding: 10px 0 0;
-        text-align: left;
-      }
-
-      svg {
-        display: block;
-      }
-    }
+  font-size: 20px;
+  padding-left: 20px;
+}
   </style>
-</head>
-<body>
+  <body>
 <header> 
-  <nav dir="rtl" id="myHeader"> על המותג 
-    <a href="/index.html"> ראשי </a> 
-    <a href="/signup.html"> הרשמה </a>
-    <a href="/products.html"> מוצרים </a>
-    <a href="/about_us.html"> עלינו </a> 
-    <a href="/live.html"> שימוש לייב </a>
-  </nav> 
+ <nav dir="rtl" id="myHeader"> על המותג 
+         <a href="/index.html"> ראשי </a> 
+      <a href="/signup.html"> הרשמה </a>
+     <a href="/products.html"> מוצרים </a>
+  <a href="/about_us.html"> עלינו </a> 
+  <a href="/live.html"> שימוש לייב </a>
+</nav> 
 </header>  
-<div class="container">
-  <div class="image">
-    <img src="photos/CITYBUILDING.png">
-  </div>
-  <div class="text">
-    <h1>על המותג</h1>
-    <svg height="50" width="300">
-      <g fill="none" stroke="#11b3dd">
-        <path stroke-width="6" d="M5 
-</div? 
+    <div class="container">
+      <div class="image">
+        <img src="photos/CITYBUILDING.png">
+      </div>
+      <div class="text" >
+        <h1 style="color:#4b4b4b;"> על המותג </h1>
+
+         <svg height="50" width="300">
+         <g fill="none" stroke="#11b3dd">
+         <path stroke-width="6" d="M5 20 l260 0" /> </g> </svg>
+
+        <p style="font-size: 16px; text-align:right; padding: 0px 40px 0px 0px; color:#858585">
+        החברה נוסדה 2019 על ידי חנן אגרונוב <br/>סיטיגו מעסיקה כיום כ30 אנשי צוות <br/> ולשנת 2022 סיטיגו  הוכתרה ב100 החברות <br/>המבטיחות ביותר בעולם לפי פורבס   </p> 
+
+              <p style="font-size: 16px; text-align:right; padding:10px 40px 0px 0px; color:#505050"> אנחנו שמחים לבשר לכם, שהבית שלנו גדל <br/> וכרגע אנו מגייסים למספר תפקידים שונים <br/> תשלחו לדוא"ל למטה את הקו"ח שלכם <br/> על מנת שנחזור אליכם </P> 
+
+        <a style="font-size:16px; text-align:right; padding: 10px 0px 0px 190px; color:#11b3dd"; href="mailto:hananag94@gmail.com?subject=Mail from Citygo recruit page"> שלח.י דוא"ל</a>  
+      </div>
+    </div>
   </body>
 </html>
